--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TheWhatsBot/WhatsBot.git"
+    "url": "git+https://github.com/Sovan22/WhatsBot.git"
   },
   "keywords": [
     "Whatsapp-Userbot",
     "whatsapp-bot"
   ],
-  "author": "Tuhin Kanti Pal",
+  "author": "Bokaboy",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/TheWhatsBot/WhatsBot/issues"
